--- a/app/src/main/res/layout/activity_artistinfo.xml
+++ b/app/src/main/res/layout/activity_artistinfo.xml
@@ -6,7 +6,7 @@
     tools:context="com.example.android.musicplayer.MainActivity">
 
     <ImageView
-        android:id="@+id/artist_image"
+        android:id="@+id/SongImage"
         android:layout_width="270dp"
         android:layout_height="270dp"
         android:contentDescription="@string/playerIcon_SongIcon"
@@ -21,16 +21,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_below="@id/artist_image"
+        android:layout_below="@id/SongImage"
         android:layout_marginBottom="20dp">
 
         <TextView
-            android:id="@+id/artist_songs"
+            android:id="@+id/songName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:textColor="@android:color/black"
             tools:text="test_song"/>
+
+        <TextView
+            android:id="@+id/songArtist"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textColor="@android:color/black"
+            tools:text="test_artist"/>
 
     </LinearLayout>
 </RelativeLayout>
