--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -19,12 +19,12 @@
         android:paddingLeft="16dp">
 
         <TextView
-            android:id="@+id/song_name_text_view"
+            android:id="@+id/songName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/song_artist_text_view"
+            android:id="@+id/songArtist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
