--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.android.musicplayer.MainActivity">
 
     <ImageView
-        android:id="@+id/musicPlayer_SongIcon"
+        android:id="@+id/songImage"
         android:layout_width="270dp"
         android:layout_height="270dp"
         android:contentDescription="@string/playerIcon_SongIcon"
@@ -22,11 +22,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_below="@id/musicPlayer_SongIcon"
+        android:layout_below="@id/songImage"
         android:layout_marginBottom="20dp">
 
         <TextView
-            android:id="@+id/song_name"
+            android:id="@+id/songName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
@@ -34,7 +34,7 @@
             tools:text="test_song"/>
 
         <TextView
-            android:id="@+id/song_artist"
+            android:id="@+id/songArtist"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
