--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.android.musicplayer.MusicActivity">
 
     <ImageView
-        android:id="@+id/song_image_view"
+        android:id="@+id/SongImage"
         android:layout_width="50dp"
         android:layout_height="50dp" />
 
