--- a/app/src/main/res/layout/activity_artistinfo.xml
+++ b/app/src/main/res/layout/activity_artistinfo.xml
@@ -7,14 +7,9 @@
 
     <ImageView
         android:id="@+id/songImage"
-        android:layout_width="270dp"
-        android:layout_height="270dp"
         android:contentDescription="@string/playerIcon_SongIcon"
-        android:layout_centerHorizontal="true"
-        android:scaleType="fitCenter"
-        android:src="@drawable/ic_player_central_icon"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"/>
+        style="@style/PlayerImageStyle"
+        android:src="@drawable/ic_player_central_icon" />
 
     <LinearLayout
         android:id="@+id/artist_song_id"
@@ -49,4 +44,12 @@
             tools:text="test_description"/>
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/toPlayerButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/toPlayerButton"
+        android:layout_below="@id/artist_song_id"
+        android:layout_centerHorizontal="true"/>
 </RelativeLayout>
