--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,8 +12,22 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_centerInParent">true</item>
-        <item name="android:layout_marginRight">8dp</item>
-        <item name="android:layout_marginLeft">8dp</item>
+        <item name="android:layout_marginRight">@dimen/marginRightLeft</item>
+        <item name="android:layout_marginLeft">@dimen/marginRightLeft</item>
+    </style>
+
+    <style name="PlayerImageStyle">
+        <item name="android:layout_width">@dimen/playerImageLayout</item>
+        <item name="android:layout_height">@dimen/playerImageLayout</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:scaleType">fitCenter</item>
+        <item name="android:layout_marginTop">@dimen/marginUpDown</item>
+        <item name="android:layout_marginBottom">20dp</item>
+    </style>
+
+    <style name="PlayerButtonsViewStyle">
+        <item name="android:layout_marginTop">@dimen/viewMarginUpDown</item>
+        <item name="android:layout_marginBottom">@dimen/viewMarginUpDown</item>
     </style>
 
 </resources>
